--- a/PDV/template/index.html
+++ b/PDV/template/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDV Moderno</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="../functions/tailwindcss.js"></script>
+    <script src="../functions/qwebchannel.js"></script>
     <script>
         tailwind.config = {
             theme: {
